site name now in header

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>{{ .Title | default .Site.Title }}</title>
+    <title>{{ .Site.Title }} - {{ .Title }}</title>
     <base href="{{ .Site.BaseURL }}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,4 +17,7 @@
     {{ end }}
     <link rel="canonical" href="{{ .Permalink }}">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prism.css">
+    
+    <script defer src="js/prism.js"></script>
 </head>
