header now shows website name

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     </nav>
     <div class="divider"></div>
     <nav id="socials">
-        <a href="{{ .Site.BaseURL }}">{{ .Title }}</a>
+        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
         {{ range .Site.Params.socialIcons }}
             <a href="{{ .url }}" class="icon-{{ .icon }}" alt="{{ .alt }}"></a>
         {{ end }}
