line breaks for smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,7 @@ body {
     padding: 10px;
     background-color: #02010a;
     border: 1px solid #191820;
+    word-wrap: break-word;
 }
 
 main {
