made css path absolute (oops)

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,5 +15,5 @@
          <meta name="keywords" content="{{ delimit . "," }}">
     {{ end }}
     <link rel="canonical" href="{{ .Permalink }}">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
