--- a/static/css/deco.css
+++ b/static/css/deco.css
@@ -36,6 +36,25 @@ a:hover {
     color: #02010a;
 }
 
+article div a {
+    text-decoration: underline;
+}
+
+code {
+    border: solid 2px rgba(119, 0, 255, 0.5);
+    border-radius: 2px;
+    padding: 2px;
+}
+
+pre code {
+    border-style: none;
+}
+
+blockquote {
+  padding-left: 15px;
+  border-left: 5px solid rgba(119, 0, 255, 0.5);
+} 
+
 #nav a::before {
     content: "/"
 }
