--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
 body {
     color: #c8c5c4;
@@ -7,7 +7,7 @@ body {
     padding: 10px;
     background-image: url("../img/y-so-serious.png");
     background-repeat: repeat;
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .page {
