+ link styling, tweaked inline code style

--- a/static/css/deco.css
+++ b/static/css/deco.css
@@ -37,13 +37,13 @@ a:hover {
 }
 
 article div a {
-    text-decoration: underline;
+    background-color: rgba(119, 0, 255, 0.3);
 }
 
 code {
-    border: solid 2px rgba(119, 0, 255, 0.5);
-    border-radius: 2px;
-    padding: 2px;
+    border: solid 2px rgba(119, 0, 255, 0.6);
+    border-radius: 1px;
+    padding: 1px;
 }
 
 pre code {
@@ -51,8 +51,8 @@ pre code {
 }
 
 blockquote {
-  padding-left: 15px;
-  border-left: 5px solid rgba(119, 0, 255, 0.5);
+    padding-left: 15px;
+    border-left: 5px solid rgba(119, 0, 255, 0.8);
 } 
 
 #nav a::before {
