--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,7 +22,8 @@ body {
     word-wrap: break-word;
 }
 
-code {
+.highlight {
+    overflow-x: scroll;
     font-family: 'Source Code Pro', monospace !important;
     font-size: 14px !important;
 }
